fix figma gap

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ h1 {
   border: rgba(192, 182, 240) solid 1.5px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 25px;
+  margin-top: 17px;
   padding-top: 2px;
   /* font-family: Gerbil; */
   font-family: hero;
@@ -141,7 +141,7 @@ h1 {
   border: rgba(239, 167, 179) solid 1.5px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 25px;
+  margin-top: 17px;
   padding-top: 2px;
   /* font-family: Gerbil; */
   font-family: hero;
@@ -158,7 +158,7 @@ h1 {
   border: rgba(245, 185, 123) solid 1.5px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 25px;
+  margin-top: 17px;
   padding-top: 2px;
   /* font-family: Gerbil; */
   font-family: hero;
@@ -175,7 +175,7 @@ h1 {
   border: rgba(163, 209, 218) solid 1.5px;
   border-radius: 10px;
   margin: auto;
-  margin-top: 25px;
+  margin-top: 17px;
   padding-top: 2px;
   /* font-family: Gerbil; */
   font-family: hero;
@@ -362,6 +362,10 @@ h2 {
 
 .gallery-1_1 img {
   margin-bottom: 10px;
+}
+
+.gallery-1_1 {
+  gap: 25px;
 }
 
 /* nedstående er løsning der skal være i 3x1fr i desktop */
